# TradingSystem-SCRY

./: CMakeLists.txt  Readme.md  Readme.txt  generateVSProject.bat
PoloniexAPI/: CMakeLists.txt  PoloniexClient.cpp  PoloniexClient.hpp  test.cpp
cpp/: ExpMovingAverageIndicator.cpp  LineIndicator.cpp  MarketMonitor.cpp  MovingAverageIndicator.cpp  TimeSeriesDataColumn.cpp  TimeSeriesDataset.cpp  main.cpp
hpp/: ExpMovingAverageIndicator.h  Indicator.h  LineIndicator.h  MarketMonitor.h  MovingAverageIndicator.h  TimeSeriesDataColumn.h  TimeSeriesDataset.h  TimeSeriesPoint.h
